# gutenhaiku

./: .gitignore  .travis.yml  LICENSE  README.md  noxfile.py  pyproject.toml
assets/: frankenstein_haiku.json
gutenhaiku/: app.py  cleaner.py  download.py  pipeline.py  utils.py
gutenhaiku/models/: __init__.py
tests/: app_setup.txt  app_setup_already_downloaded.txt  app_splash.txt  input_text.txt  test_all.py
